# ClientServer

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  build.ps1  build.sh
cmake/: AddBoostAsio.cmake  AddCatch2.cmake  AddTrompeloeil.cmake
include/detail/: ErrHandler.hpp  Precompiled.hpp  StringUtils.hpp  TimeMeasurment.hpp
include/lib/: Client.hpp  ClientServerBase.hpp  Server.hpp
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  Client.cpp  ClientServerBase.cpp
test/: CMakeLists.txt  ClientServerBaseTests.cpp  ClientTests.cpp  ServerTests.cpp  lib_Tests.cpp
